tests/baselines/reference/parserX_ArrowFunction1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction1.ts(1,13): error TS1110: Type expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction1.ts (1 errors) ====
    var v = (a: ) => {
                ~
!!! error TS1110: Type expected.
       
    };